--- a/github-user-search/index.html
+++ b/github-user-search/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+
+    <title>Github User Search</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <form id="Github Username">
+      <input type="text" id="username" placeholder="username" required>
+      <input type="password " id="password" placeholder="password" required>
+      <input type="submit" value="Register">
+    </form>
+
   </body>
 </html>
